[package]
name = "lucid-suggest-core"
version = "0.5.0"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
rust-stemmers = "1.2"

[dev-dependencies]
insta = "0.16"
criterion = "0.3"

[profile.release]

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "search"
harness = false