[package]
name = "lucid-suggest-core"
version = "0.8.0"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
edition = "2018"

[lib]

[profile.release]
debug = true

[dependencies]
rust-stemmers = "1.2"
fnv = "1.0.3"

[dev-dependencies]
insta = "0.16"
criterion = "0.3"
rand = "0.7.3"
serde_json = "1.0"
regex = "1.3"

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "search"
harness = false
